# zvalue

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  LICENSE.txt  README.md  significant.hpp  zvalue.cpp  zvalue.hpp
docker/: build.sh  coveralls.sh
test/: zvalue_all_test.cc  zvalue_five_dimensions_test.cc
